--- a/src/styles/scss/index.scss
+++ b/src/styles/scss/index.scss
@@ -1,3 +1,5 @@
+// bootstrap variable override
+@import "variables";
 // import the default bootstrap scss from node modules
 @import "node_modules/bootstrap/scss/bootstrap";
 
