--- a/src/styles/css/style.css
+++ b/src/styles/css/style.css
@@ -153,9 +153,9 @@ input {
   background: #fde3a7; }
 
 .btn-conf {
-  border-radius: 50px;
+  border-radius: 10px;
   margin-right: 15px;
-  font-size: 11px;
+  font-size: 14px;
   letter-spacing: 1px;
   text-transform: uppercase;
   padding: 14px 28px 13px 28px; }
@@ -177,7 +177,7 @@ input {
   border-color: #ffffff; }
 
 .dmbutton {
-  background: transparent;
+  background: rgba(0, 0, 0, 0);
   border: 1px solid #ffffff;
   color: #ffffff;
   -webkit-border-radius: 2px;
@@ -202,11 +202,17 @@ input {
   font-weight: normal !important; }
 
 /* HEADER SECTION */
+@media only screen and (max-width: 479px) {
+  #h {
+    background: url("/img/header_mobile.jpg") no-repeat center top; } }
+
+@media only screen and (min-width: 479px) {
+  #h {
+    background: url("/img/header.jpg") no-repeat center top; } }
+
 #h {
-  background: url("/img/header.jpg") no-repeat center top;
   padding-top: 5px;
   background-attachment: relative;
-  background-position: center center;
   min-height: 700px;
   width: 100%;
   -webkit-background-size: 100%;
@@ -296,7 +302,7 @@ input {
 /* CONTACT SEPARATOR */
 #sep {
   background: url("/img/sep.jpg") no-repeat center top;
-  padding-top: 100px;
+  padding-top: 200px;
   background-attachment: relative;
   background-position: center center;
   min-height: 450px;
@@ -333,10 +339,13 @@ input {
   background-color: #2b2e31;
   padding: 5px; }
 
-.btn-primary {
-  color: #73b8e4;
-  background-color: #fff;
-  border-color: #fff; }
-
 .w-10 {
   width: 10%; }
+
+canvas {
+  width: 100%;
+  height: 100%;
+  display: block; }
+
+div.chartjs-render-monitor {
+  padding: 1px; }
