--- a/src/styles/scss/style.scss
+++ b/src/styles/scss/style.scss
@@ -184,9 +184,9 @@ input {
 }
 
 .btn-conf {
-  border-radius: 50px;
+  border-radius: 10px;
   margin-right: 15px;
-  font-size: 11px;
+  font-size: 14px;
   letter-spacing: 1px;
   text-transform: uppercase;
   padding: 14px 28px 13px 28px;
@@ -239,11 +239,21 @@ input {
 
 /* HEADER SECTION */
 
+@media only screen and (max-width: 479px) {
+  #h {
+    background: url("/img/header_mobile.jpg") no-repeat center top;
+  }
+}
+
+@media only screen and (min-width: 479px) {
+  #h {
+    background: url("/img/header.jpg") no-repeat center top;
+  }
+}
+
 #h {
-  background: url("/img/header.jpg") no-repeat center top;
   padding-top: 5px;
   background-attachment: relative;
-  background-position: center center;
   min-height: 700px;
   width: 100%;
   -webkit-background-size: 100%;
@@ -352,7 +362,7 @@ input {
 
 #sep {
   background: url("/img/sep.jpg") no-repeat center top;
-  padding-top: 100px;
+  padding-top: 200px;
   background-attachment: relative;
   background-position: center center;
   min-height: 450px;
@@ -396,11 +406,16 @@ input {
   padding: 5px;
 }
 
-.btn-primary {
-  color: #73b8e4;
-  background-color: #fff;
-  border-color: #fff;
-}
 .w-10 {
   width: 10%;
+}
+
+canvas {
+  width: 100%;
+  height: 100%;
+  display: block;
+}
+
+div.chartjs-render-monitor {
+  padding: 1px;
 }
