--- a/src/styles/scss/style.scss
+++ b/src/styles/scss/style.scss
@@ -17,7 +17,7 @@
 
 * {
   margin: 0;
-  padding: 0px;
+  padding: 0;
   font-family: "Lato", sans-serif;
 }
 
@@ -121,8 +121,8 @@ body {
 }
 
 *,
-*:after,
-*:before {
+*::after,
+*::before {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
@@ -149,8 +149,8 @@ a:focus {
 }
 
 .nopadding {
-  padding: 0px !important;
-  margin: 0px;
+  padding: 0 !important;
+  margin: 0;
 }
 
 /* FORM CONFIGURATION */
@@ -203,18 +203,10 @@ input {
   color: #2f2f2f;
 }
 
-.dmbutton:hover,
-.dmbutton:active,
-.dmbutton:focus {
-  color: #ffffff;
-  background-color: #222222;
-  border-color: #ffffff;
-}
-
 .dmbutton {
   background: rgba(0, 0, 0, 0);
-  border: 1px solid #ffffff;
-  color: #ffffff;
+  border: 1px solid #fff;
+  color: #fff;
   -webkit-border-radius: 2px;
   border-radius: 2px;
   padding-top: 1.025rem;
@@ -234,7 +226,14 @@ input {
   -moz-transition: background-color 300ms ease-out;
   transition: background-color 300ms ease-out;
   -webkit-appearance: none;
-  font-weight: normal !important;
+}
+
+.dmbutton:hover,
+.dmbutton:active,
+.dmbutton:focus {
+  color: #fff;
+  background-color: #222;
+  border-color: #fff;
 }
 
 /* HEADER SECTION */
@@ -260,9 +259,6 @@ input {
   -moz-background-size: 100%;
   -o-background-size: 100%;
   background-size: 100%;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
   background-size: cover;
   color: white;
 }
@@ -277,6 +273,20 @@ input {
   font-weight: 900;
   color: white;
   letter-spacing: 1px;
+}
+
+.portfolio-item h3 {
+  margin: -10px 0 10px;
+  font-size: 16px;
+  text-transform: uppercase;
+}
+
+.tpl6 h3 {
+  color: #fff;
+  margin: 0;
+  padding: 40px 5px 0;
+  font-size: 22px;
+  text-transform: uppercase;
 }
 
 #h h3 {
@@ -301,27 +311,13 @@ input {
   display: block;
 }
 
-.portfolio-item .title:before {
+.portfolio-item .title::before {
   border-radius: 0;
   display: none;
 }
 
 .portfolio-item p {
-  margin: 0px 0 30px;
-}
-
-.portfolio-item h3 {
-  margin: -10px 0 10px;
-  font-size: 16px;
-  text-transform: uppercase;
-}
-
-.tpl6 h3 {
-  color: #fff;
-  margin: 0;
-  padding: 40px 5px 0;
-  font-size: 22px;
-  text-transform: uppercase;
+  margin: 0 0 30px;
 }
 
 .tpl6 h4 {
@@ -372,11 +368,6 @@ input {
   -moz-background-size: 100%;
   -o-background-size: 100%;
   background-size: 100%;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
-  color: white;
 }
 
 #sep h3 {
